--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
   background-color: #202225;
   color: var(--primary-text);
   font-family: Arial, Helvetica, sans-serif;
-  height: 100%;
+  /* height: 100%; */
 }
 
 ul {
@@ -155,14 +155,17 @@ i:hover {
 }
 
 .container {
-  height: 100%;
+  /* height: 900px;
   margin: 0 auto;
   padding: 3rem;
-  /* display: grid;
-  grid-template-columns: 1.5fr 1fr;
+  display: grid;
+  grid-template-columns: 1.3fr 1fr;
   grid-gap: 1rem; */
+  width: 95%;
+  margin: 2rem auto 0;
   display: flex;
-  box-sizing: content-box;
+  height: 900px;
+  align-items: stretch;
 }
 
 .heading {
@@ -171,19 +174,25 @@ i:hover {
 }
 
 .challenge-submission-area {
-  max-height: 100%;
-  margin-right: 1rem;
+  height: 900px;
 }
 
 .challenge-container,
 .submission-container {
+  flex-grow: 2;
   background: var(--secondary-background);
-  padding: 2.5rem;
+  padding: 2.3rem;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 6px;
   box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02),
     0 6.7px 5.3px rgba(0, 0, 0, 0.028), 0 12.5px 10px rgba(0, 0, 0, 0.035);
+  margin-right: 1rem;
   max-height: 100%;
+}
+
+.submission-container,
+.discussion-area {
+  margin-bottom: 2rem;
 }
 
 .challenge-container {
@@ -195,20 +204,10 @@ i:hover {
   margin-bottom: 1.5rem;
 }
 
-.challenge-video-area {
-  position: relative;
-  overflow: hidden;
-  padding-top: 56.25%;
-  margin-bottom: 1rem;
-}
-
 iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
+  margin: 1.5rem 0;
   width: 100%;
-  height: 100%;
-  border: 0;
+  height: 400px;
 }
 
 .discussion-area {
@@ -219,10 +218,13 @@ iframe {
     0 6.7px 5.3px rgba(0, 0, 0, 0.028), 0 12.5px 10px rgba(0, 0, 0, 0.035);
   display: flex;
   flex-direction: column;
+  overflow-y: hidden;
+  max-height: 900px;
 }
 
 .discussion-header-container {
   display: flex;
+  flex-shrink: 0;
   margin-bottom: 1rem;
   padding: 3rem 2rem 0;
 }
@@ -233,8 +235,7 @@ iframe {
 }
 
 .questions-container {
-  overflow: auto;
-  height: 100%;
+  overflow-y: auto;
 }
 
 .questions-thread::-webkit-scrollbar {
@@ -244,8 +245,6 @@ iframe {
 .questions-thread {
   display: flex;
   flex-direction: column;
-  overflow-y: scroll;
-  height: 100%;
 }
 
 .question-card {
@@ -255,7 +254,6 @@ iframe {
   padding: 1rem;
   background: var(--card-background);
   flex-shrink: 0;
-  /* max-height: 100%; */
 }
 
 .question-header {
@@ -306,21 +304,27 @@ iframe {
   font-weight: bold;
 }
 
-@media all and (max-width: 1024px) {
+@media all and (max-width: 1250px) {
+  /* Do calc here to compensate for height of challenge description text */
   iframe {
-    height: auto;
+    height: 383px;
   }
 }
 
-@media all and (max-width: 800px) {
+@media all and (max-width: 940px) {
   .container {
     display: flex;
     flex-direction: column;
-    width: 90%;
+    width: 80%;
   }
 
-  iframe {
-    height: 400px;
+  .submission-container,
+  .challenge-container {
+    margin-right: 0;
+  }
+
+  .discussion-area {
+    overflow: visible;
   }
 
   .challenge-container,
@@ -331,9 +335,21 @@ iframe {
   }
 }
 
+@media all and (max-width: 800px) {
+  /* iframe {
+    height: 300px;
+  } */
+}
+
 @media all and (max-width: 600px) {
   .container {
     width: 100%;
+    height: 100%;
+    margin-bottom: 0;
+  }
+
+  .challenge-submission-area {
+    height: 100%;
   }
 
   iframe {
@@ -351,5 +367,6 @@ iframe {
 
   .discussion-area {
     width: 100%;
+    height: 100%;
   }
 }
