--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ i:hover {
 }
 
 .challenge-submission-area {
-  height: 900px;
+  max-height: 900px;
 }
 
 .challenge-container,
@@ -238,8 +238,22 @@ iframe {
   overflow-y: auto;
 }
 
-.questions-thread::-webkit-scrollbar {
-  width: 0.5rem;
+.questions-container::-webkit-scrollbar {
+  width: 1rem;
+}
+
+.questions-container::-webkit-scrollbar-track {
+  background: #18191b;
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
+}
+
+.questions-container::-webkit-scrollbar-thumb {
+  background-color: var(--card-background);
+  border: 3px solid transparent;
+  border-radius: 10px;
+  width: 5px;
+  background-clip: content-box;
 }
 
 .questions-thread {
@@ -248,12 +262,16 @@ iframe {
 }
 
 .question-card {
-  margin: 0.5rem 0 0;
+  /* margin: 0.5rem 0 0; */
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 8px;
   padding: 1rem;
   background: var(--card-background);
   flex-shrink: 0;
+}
+
+.question-card:nth-child(n + 2) {
+  margin-top: 0.5rem;
 }
 
 .question-header {
