--- a/style.css
+++ b/style.css
@@ -20,15 +20,11 @@
   padding: 0;
 }
 
-html {
-  height: 100%;
-}
-
 body {
   background-color: #202225;
   color: var(--primary-text);
   font-family: Arial, Helvetica, sans-serif;
-  /* height: 100%; */
+  height: 100%;
 }
 
 ul {
@@ -43,13 +39,14 @@ h1 {
   color: var(--title-text);
   font-family: "Roboto Slab", serif;
   font-weight: 500;
+  margin: 0 0 0.5rem;
 }
 
 button {
   margin-top: 1rem;
   background: #6271c0;
   color: #fff;
-  padding: 6px 12px;
+  padding: 7px 12px;
   border-radius: 4px;
   border: none;
   font-size: 1rem;
@@ -178,12 +175,13 @@ i:hover {
   display: flex;
   flex-direction: column;
   align-items: stretch;
+  height: 900px;
 }
 
 .challenge-container,
 .submission-container {
   background: var(--secondary-background);
-  padding: 3rem;
+  padding: 3.3rem;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 6px;
   box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.05),
@@ -200,13 +198,9 @@ i:hover {
 }
 
 iframe {
-  margin: 1.5rem 0;
+  margin: 1.5rem 0 1rem;
   width: 100%;
   height: 400px;
-}
-
-.submission-container {
-  flex-grow: 1;
 }
 
 .discussion-area {
@@ -238,7 +232,7 @@ iframe {
 }
 
 .questions-container::-webkit-scrollbar {
-  width: 1rem;
+  width: 1.15rem;
 }
 
 .questions-container::-webkit-scrollbar-track {
@@ -251,7 +245,6 @@ iframe {
   background-color: var(--card-background);
   border: 3px solid transparent;
   border-radius: 10px;
-  width: 5px;
   background-clip: content-box;
 }
 
@@ -321,18 +314,24 @@ iframe {
   font-weight: bold;
 }
 
-@media all and (max-width: 1250px) {
-  /* Do calc here to compensate for height of challenge description text */
+@media all and (max-width: 1290px) {
+  .modal-content {
+    width: 50%;
+    margin: 20% auto;
+  }
+  .container {
+    width: 90%;
+  }
   iframe {
     height: 300px;
   }
 }
 
-@media all and (max-width: 940px) {
+@media all and (max-width: 1000px) {
   .container {
     display: flex;
     flex-direction: column;
-    width: 85%;
+    width: 75%;
   }
 
   .submission-container,
@@ -352,25 +351,52 @@ iframe {
   }
 }
 
-@media all and (max-width: 800px) {
-  /* iframe {
-    height: 300px;
-  } */
+@media all and (max-width: 900px) {
+  .modal-content {
+    width: 75%;
+    margin: 25% auto;
+  }
+
+  .container {
+    width: 80%;
+  }
 }
 
 @media all and (max-width: 600px) {
+  .modal-content {
+    width: 90%;
+    margin: 35% auto;
+    padding: 0.5rem;
+  }
+
+  h1 {
+    font-size: 1.3rem;
+  }
+
+  button {
+    font-size: 0.9rem;
+  }
+
+  iframe {
+    height: 220px;
+    margin-bottom: 0.5rem;
+  }
+
   .container {
-    width: 100%;
-    height: 100%;
-    margin-bottom: 0;
+    /* height: 100%; */
+    margin: 1rem auto 0;
   }
 
   .challenge-submission-area {
     height: 100%;
   }
 
-  iframe {
-    height: 200px;
+  .challenge-submission-area p {
+    font-size: 0.85rem;
+  }
+
+  .heading {
+    font-size: 0.8rem;
   }
 
   .challenge-container,
@@ -385,5 +411,11 @@ iframe {
   .discussion-area {
     width: 100%;
     height: 100%;
+  }
+}
+
+@media all and (max-width: 500px) {
+  .container {
+    width: 100%;
   }
 }
