--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ h1 {
   color: var(--title-text);
   font-family: "Roboto Slab", serif;
   font-weight: 500;
-  margin: 0 0 0.4rem;
+  margin: 0;
 }
 
 button {
@@ -49,7 +49,7 @@ button {
   padding: 8px 15px;
   border-radius: 4px;
   border: none;
-  font-size: 1rem;
+  font-size: 0.95rem;
   font-family: "Roboto Slab", serif;
   font-weight: 300;
 }
@@ -203,6 +203,10 @@ iframe {
   height: 400px;
 }
 
+.submission-container {
+  flex-grow: 1;
+}
+
 .discussion-area {
   background: var(--secondary-background);
   padding: 0.5rem;
@@ -219,7 +223,7 @@ iframe {
   display: flex;
   flex-shrink: 0;
   margin-bottom: 1rem;
-  padding: 3rem 2rem 0;
+  padding: 3rem 1.5rem 0;
 }
 
 .discussion-header-container button {
@@ -316,7 +320,7 @@ iframe {
 
 @media all and (max-width: 1540px) {
   iframe {
-    height: 380px;
+    height: 395px;
   }
 }
 
@@ -363,15 +367,19 @@ iframe {
   iframe {
     height: 360px;
   }
-}
 
-@media all and (max-width: 700px) {
-  .container {
-    width: 85%;
+  .discussion-header-container {
+    padding: 3rem 0.5rem 0;
   }
 }
 
-@media all and (max-width: 640px) {
+@media all and (max-width: 725px) {
+  .container {
+    width: 90%;
+  }
+}
+
+@media all and (max-width: 650px) {
   .modal-content {
     width: 90%;
     margin: 35% auto;
